--- a/public/index.html
+++ b/public/index.html
@@ -19,25 +19,31 @@
     <div id="nav-placeholder"></div>
 
     <div class="container">
-      <div class="row" style="height: 100px"></div>
+      <div class="row" style="height: 50px"></div>
 
       <div class="row">
-        <div class="col">
+        <div class="col-2"></div>
+        <div class="col-10">
           <h1>About</h1>
         </div>
       </div>
       <div class="row">
-        <p>
-          This website offers comprehensive grammar lessons and a comprehensive
-          translation dictionary for students of Russian. Our grammar lessons
-          cover all the key aspects of Russian grammar, from sentence structure
-          to verb conjugation and declension. And our translation dictionary is
-          a valuable resource for anyone who needs help with a specific
-          translation. We are constantly updating and expanding our website to
-          provide the best possible learning experience for our students. Thank
-          you for visiting, and we hope you find our resources helpful as you
-          continue to learn Russian.
-        </p>
+        <div class="col-2"></div>
+        <div class="col-8">
+          <p>
+            This website offers comprehensive grammar lessons and a comprehensive
+            translation dictionary for students of Russian. Our grammar lessons
+            cover all the key aspects of Russian grammar, from sentence structure
+            to verb conjugation and declension. And our translation dictionary is
+            a valuable resource for anyone who needs help with a specific
+            translation. We are constantly updating and expanding our website to
+            provide the best possible learning experience for our students. Thank
+            you for visiting, and we hope you find our resources helpful as you
+            continue to learn Russian.
+          </p>
+
+        </div>
+        
 
       </div>
     </div>
