--- a/public/nav.html
+++ b/public/nav.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <div class="row nav-bar">
         <nav class="navbar navbar-dark navbar-expand-xl nav-bar static-top">
-          <a class="navbar-brand" href=""><img style="padding-left: 16px;" src="brand.svg" width = 75 height= 75 alt=""></a>
+          <a class="navbar-brand d-none d-xl-inline" href="index.html"><img style="padding-left: 13px;" src="brand.svg" width = 75 height= 75 alt=""></a>
           <div class="container-fluid">
             <a class="navbar-brand white"href="index.html"
               ><h3>Guide to Russian Grammar</h3></a
