--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -15,7 +15,28 @@
   <body>
     <div id="nav-placeholder"></div>
     <div class="container">
-      <div class="row" style="height: 50px;"></div>
+      <div class="row" style="height: 50px"></div>
+      <h2>Pronouns</h2>
+      <div class="row">
+        <p>
+          In Russian, pronouns are used to replace nouns in a sentence, just
+          like in English. Russian has six personal pronouns, which are used to
+          indicate the person speaking (first person), the person being spoken
+          to (second person), or the person or thing being spoken about (third
+          person). <br />
+          <br />
+
+          These pronouns have different forms depending on their grammatical
+          case, which is determined by their function in the sentence. Russian
+          has six grammatical cases, which are used to indicate the role of a
+          noun or pronoun in the sentence. <br>
+          <br>
+
+          In addition to having different forms depending on their gramtical case, the
+          pronouns must also match the gender/pluarlity in which the noun it replaces. These charts
+          describe how the pronoun declines and matches with gender.
+        </p>
+      </div>
       <h3>Singular Personal Pronouns</h3>
       <table class="table">
         <thead>
@@ -186,24 +207,30 @@
             <td>Твои</td>
           </tr>
           <tr>
-            <th scope="row">Accusative <br>
-                            Animate
+            <th scope="row">
+              Accusative <br />
+              Animate
             </th>
-            <td>Мой <br>
-                Моего</td>
+            <td>
+              Мой <br />
+              Моего
+            </td>
             <td>Мою</td>
             <td>Моё</td>
-            <td>Мои <br>
-                Моих
+            <td>
+              Мои <br />
+              Моих
             </td>
             <td></td>
-            <td>Твой <br>
-                Твоего
+            <td>
+              Твой <br />
+              Твоего
             </td>
             <td>Твою</td>
             <td>Твоё</td>
-            <td>Твои <br>
-                Твоих
+            <td>
+              Твои <br />
+              Твоих
             </td>
           </tr>
           <tr>
@@ -257,7 +284,7 @@
         </tbody>
       </table>
 
-      <div class="row" style="height: 50px;"></div>
+      <div class="row" style="height: 50px"></div>
 
       <h3>Plural Possesive Pronouns</h3>
       <table class="table">
@@ -301,24 +328,30 @@
             <td>Ваши</td>
           </tr>
           <tr>
-            <th scope="row">Accusative <br>
-                            Animate
+            <th scope="row">
+              Accusative <br />
+              Animate
             </th>
-            <td>Наш <br>
-                Нашего</td>
+            <td>
+              Наш <br />
+              Нашего
+            </td>
             <td>Нашу</td>
             <td>Наше</td>
-            <td>Наши <br>
-                Наших
+            <td>
+              Наши <br />
+              Наших
             </td>
             <td></td>
-            <td>Ваш <br>
-                Вашего
+            <td>
+              Ваш <br />
+              Вашего
             </td>
             <td>Вашу</td>
             <td>Ваше</td>
-            <td>Ваши <br>
-                Ваших
+            <td>
+              Ваши <br />
+              Ваших
             </td>
           </tr>
           <tr>
@@ -371,6 +404,8 @@
           </tr>
         </tbody>
       </table>
+
+      <div class="row" style="height: 50px"></div>
 
       <h3>Question Words</h3>
       <div class="row">
