--- a/public/verbs.html
+++ b/public/verbs.html
@@ -18,8 +18,20 @@
     <div id="nav-placeholder"></div>
 
     <div class="container">
-      <div class="row" style="height: 50px;"></div>
+      <div class="row" style="height: 50px"></div>
       <h2>Verbs</h2>
+      <p>
+        Verbs in Russian are words that express actions or states of being. They
+        are used to indicate what the subject of a sentence is doing or what its
+        state of being is. For example, the verb "говорить" (to speak) indicates
+        that the subject of the sentence is speaking, and the verb "быть" (to
+        be) indicates that the subject of the sentence is in a particular state
+        of being. Verbs in Russian have different forms that indicate the
+        person, number, tense, and aspect of the action or state of being that
+        they express. For example, the verb "говорить" has the following forms:
+        "говорю" (I speak), "говоришь" (you speak), "говорит" (he/she speaks),
+        "говорим" (we speak), "говорите" (you speak), "говорят" (they speak).
+      </p>
 
       <div class="row">
         <div class="col-12 col-md-6">
@@ -29,7 +41,7 @@
                 <th class="text-center" colspan="4">First Conjugation</th>
               </tr>
               <tr>
-                <td class="text-center" colspan="4"> drop -ть and add:</td>
+                <td class="text-center" colspan="4">drop -ть and add:</td>
               </tr>
             </thead>
             <tbody>
@@ -61,7 +73,7 @@
                 <th class="text-center" colspan="4">Second Conjugation</th>
               </tr>
               <tr>
-                <td class="text-center" colspan="4"> drop ить and add:</td>
+                <td class="text-center" colspan="4">drop ить and add:</td>
               </tr>
             </thead>
             <tbody>
@@ -87,7 +99,6 @@
           </table>
         </div>
       </div>
-      
     </div>
   </body>
 
