--- a/public/accusative.html
+++ b/public/accusative.html
@@ -37,13 +37,13 @@
             <a class="nav-link" href="nominative.html">Nominative</a>
             <a class="nav-link active" href="accusative.html">Accusative</a>
             <a class="nav-link" href="dative.html">Dative</a>
-            <a class="nav-link" href="genetive.html">Genetive</a>
+            <a class="nav-link" href="genetive.html">Genitive</a>
             <a class="nav-link" href="instrumental.html">Instrumental</a>
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
-        <div class="col-2 d-block d-md-none"></div>
-        <div class="col-9">
+
+        <div class="col-md-9">
           <div style="height: 50px"></div>
           <h2>Accusative Case</h2>
           <p>
