--- a/public/adjectives.html
+++ b/public/adjectives.html
@@ -16,71 +16,85 @@
     <div id="nav-placeholder"></div>
 
     <div class="container">
-      <div class="row" style="height: 50px;"></div>
-      <div class="row">
-        <h2>Adjectives</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <td></td>
-              <th>Masculine</th>
-              <th>Feminine</th>
-              <th>Neuter</td>
-              <th>Plural</th>
-          </thead>
-          <tbody>
-            
-            <tr>
-              <th scope="row">Nominative</th>
-              <td>ый</td>
-              <td>ая</td>
-              <td>ое</td>
-              <td>ые</td>
-            </tr>
-            <tr>
-              <th scope="row">Accusative <br>
-                              Animate
-              </th>
-              <td>ый <br>
-                  его</td>
-              <td>ую</td>
-              <td>ое</td>
-              <td>ые <br>
-                  ых
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Dative</th>
-              <td>ому</td>
-              <td>ой</td>
-              <td>ому</td>
-              <td>ым
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">Genitive</th>
-              <td>ого</td>
-              <td>ую</td>
-              <td>ого</td>
-              <td>ых</td>
-            </tr>
-            <tr>
-              <th scope="row">Instrumental</th>
-              <td>ым</td>
-              <td>ой</td>
-              <td>ым</td>
-              <td>ыми</td>
-            </tr>
-            <tr>
-              <th scope="row">Prepositional</th>
-              <td>ом</td>
-              <td>ой</td>
-              <td>ым</td>
-              <td>ых</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <div class="row" style="height: 50px"></div>
+      <h2>Adjectives</h2>
+      <p>
+        Adjectives in Russian are words that are used to describe or modify
+        nouns. They can provide information about the size, shape, color, or
+        other qualities of the noun they are modifying. For example, the word
+        "красный" (red) is an adjective that can be used to describe the color
+        of an apple. Adjectives in Russian agree with the noun they modify in
+        gender, number, and case. This means that the ending of the adjective
+        will change depending on the gender, number, and case of the noun it is
+        modifying. For example, the word "красный" would become "красная" if it
+        is modifying a feminine noun in the nominative case, and "красную" if it
+        is modifying a feminine noun in the genitive case.
+      </p>
+      <table class="table">
+        <thead>
+          <tr>
+            <td></td>
+            <th>Masculine</th>
+            <th>Feminine</th>
+            <th>Neuter</th>
+            <th>Plural</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <th scope="row">Nominative</th>
+            <td>ый</td>
+            <td>ая</td>
+            <td>ое</td>
+            <td>ые</td>
+          </tr>
+          <tr>
+            <th scope="row">
+              Accusative <br />
+              Animate
+            </th>
+            <td>
+              ый <br />
+              его
+            </td>
+            <td>ую</td>
+            <td>ое</td>
+            <td>
+              ые <br />
+              ых
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">Dative</th>
+            <td>ому</td>
+            <td>ой</td>
+            <td>ому</td>
+            <td>ым</td>
+          </tr>
+          <tr>
+            <th scope="row">Genitive</th>
+            <td>ого</td>
+            <td>ую</td>
+            <td>ого</td>
+            <td>ых</td>
+          </tr>
+          <tr>
+            <th scope="row">Instrumental</th>
+            <td>ым</td>
+            <td>ой</td>
+            <td>ым</td>
+            <td>ыми</td>
+          </tr>
+          <tr>
+            <th scope="row">Prepositional</th>
+            <td>ом</td>
+            <td>ой</td>
+            <td>ым</td>
+            <td>ых</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 
