--- a/public/genetive.html
+++ b/public/genetive.html
@@ -42,8 +42,8 @@
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
-        <div class="col-2 d-block d-md-none"></div>
-        <div class="col-9">
+
+        <div class="col-md-9">
           <div style="height: 50px"></div>
           <h2>Genitive Case</h2>
           <p>
