--- a/public/cases.html
+++ b/public/cases.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="prepositional.html">Prepositional</a>
           </nav>
         </div>
-        <div class="col-12">
+        <div class="col-md-9">
           <div style="height: 50px"></div>
           <h2>Cases</h2>
           <p>
