--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -29,12 +29,13 @@
           These pronouns have different forms depending on their grammatical
           case, which is determined by their function in the sentence. Russian
           has six grammatical cases, which are used to indicate the role of a
-          noun or pronoun in the sentence. <br>
-          <br>
+          noun or pronoun in the sentence. <br />
+          <br />
 
-          In addition to having different forms depending on their gramtical case, the
-          pronouns must also match the gender/pluarlity in which the noun it replaces. These charts
-          describe how the pronoun declines and matches with gender.
+          In addition to having different forms depending on their gramtical
+          case, the pronouns must also match the gender/pluarlity in which the
+          noun it replaces. These charts describe how the pronoun declines and
+          matches with gender.
         </p>
       </div>
       <h3>Singular Personal Pronouns</h3>
@@ -166,6 +167,7 @@
       </table>
       <div class="row" style="height: 50px"></div>
       <h3>Singular Possesive Pronouns</h3>
+      <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
@@ -283,10 +285,13 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
       <div class="row" style="height: 50px"></div>
 
       <h3>Plural Possesive Pronouns</h3>
+
+      <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
@@ -404,7 +409,7 @@
           </tr>
         </tbody>
       </table>
-
+      </div>
       <div class="row" style="height: 50px"></div>
 
       <h3>Question Words</h3>
