--- a/public/accusative.html
+++ b/public/accusative.html
@@ -30,8 +30,8 @@
         </nav>
       </div>
 
-      <div class="row">
-        <div class="col-2 d-none d-md-block red-background vh-100">
+      <div class="row max-height">
+        <div class="col-2 d-none d-md-block red-background">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -68,6 +68,7 @@
             confusion or misunderstandings.
           </p>
 
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -88,6 +89,67 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Accusative Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th rowspan="2">
+                Masculine <br>
+                <span style="color: blue;">Inanimate</span> <br>
+                <br>
+                <br>
+                <span style="color: blue;">Animate</span>
+              </th>
+              <td>
+                - <br>
+                й <br>
+                ь <br>
+                ий
+              </td>
+              <td class="red">
+                &rarr; и <br>
+                &rarr; +ы <br>
+                &rarr; и <br>
+                &rarr; +ы
+              </td>
+            </tr>
+            <tr>
+              <td>
+                - <br>
+                й, ь 
+              </td>
+              <td class="red">
+                &rarr; а <br>
+                &rarr; я 
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                ь <br>
+                а <br>
+                я <br>
+                ия
+              </td>
+              <td class="red">
+                &rarr; и <br>
+                &rarr; ы (и)
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                о <br>
+                е <br>
+                ие
+              </td>
+              <td class="red">
+                &rarr; о <br>
+                &rarr; е <br>
+                &rarr; ие
+              </td>
+            </tr>
           </table>
         </div>
       </div>
