--- a/public/dative.html
+++ b/public/dative.html
@@ -69,6 +69,7 @@
             misunderstandings. <br />
           </p>
 
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -88,6 +89,45 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Dative Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th>Masculine</th>
+              <td>
+                - <br>
+                и, ь
+              </td>
+              <td class="red">
+                &rarr; +у <br>
+                &rarr; ю
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                а, я <br>
+                ь <br>
+                ия
+              </td>
+              <td class="red">
+                &rarr; e <br>
+                &rarr; и <br>
+                &rarr; ии
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                о <br>
+                е
+              </td>
+              <td class="red">
+                &rarr; у <br>
+                &rarr; ю
+              </td>
+            </tr>
           </table>
         </div>
       </div>
