--- a/public/genetive.html
+++ b/public/genetive.html
@@ -30,8 +30,8 @@
         </nav>
       </div>
 
-      <div class="row">
-        <div class="col-2 d-none d-md-block red-background vh-100">
+      <div class="row max-height">
+        <div class="col-2 d-none d-md-block red-background">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -68,6 +68,7 @@
             misunderstandings. <br />
           </p>
 
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -88,6 +89,43 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Geneitive Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th>Masculine</th>
+              <td>
+                - <br>
+                й, ь
+              </td>
+              <td class="red">
+                &rarr; +а <br>
+                &rarr; я
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                а <br>
+                я, ь
+              </td>
+              <td class="red">
+                &rarr; ы<br>
+                &rarr; и
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                о <br>
+                е
+              </td>
+              <td class="red">
+                &rarr; а <br>
+                &rarr; я
+              </td>
+            </tr>
           </table>
         </div>
       </div>
