--- a/public/instrumental.html
+++ b/public/instrumental.html
@@ -30,8 +30,8 @@
         </nav>
       </div>
 
-      <div class="row">
-        <div class="col-2 d-none d-md-block red-background vh-100">
+      <div class="row max-height">
+        <div class="col-2 d-none d-md-block red-background">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -68,6 +68,7 @@
             to confusion or misunderstandings. <br />
           </p>
 
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -87,6 +88,45 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Instrumental Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th>Masculine</th>
+              <td>
+                - or 5-letter <br>
+                и, ь
+              </td>
+              <td class="red">
+                &rarr; ом or ем <br>
+                &rarr; ем, ём (when stressed)
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                a or 5-letter rule <br>
+                я <br>
+                ь
+              </td>
+              <td class="red">
+                &rarr; ой or ей <br>
+                &rarr; ей <br>
+                &rarr; ью
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                if о <br>
+                if е, 7-letter rule
+              </td>
+              <td class="red">
+                &rarr; а <br>
+                &rarr; я (а)
+              </td>
+            </tr>
           </table>
         </div>
       </div>
