--- a/public/nominative.html
+++ b/public/nominative.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <div class="row d-block d-md-none">
         <nav class="nav nav-pills red-background scroll">
-          <div class="nav-link hide-hover" href=""></div> 
+          <div class="nav-link hide-hover" href=""></div>
           <a class="nav-link active" href="nominative.html">Nominative</a>
           <a class="nav-link" href="accusative.html">Accusative</a>
           <a class="nav-link" href="dative.html">Dative</a>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="row">
-        <div class="col-2 d-none d-md-block red-background vh-100">
+        <div class="col-2 d-none d-md-block red-background" style="min-height: 100%;">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link active" href="nominative.html">Nominative</a>
@@ -50,23 +50,24 @@
             used to indicate the subject of a sentence, that is, the person or
             thing performing the action. In Russian, the ending of a noun or
             pronoun in the nominative case typically depends on the gender,
-            number, and animacy of the word. <br />
-            <br>
+            number, and animacy of the word. It's normal form is the dictionary
+            form <br />
+            <br />
             For example, the noun "замок" (castle) is masculine and singular, so
-            in the nominative case it would be written as "замок". But
-            if the noun were feminine, such as "книга" (book), it would be
-            written as "книга" (kniga) in the nominative case. <br />
-            <br>
+            in the nominative case it would be written as "замок". But if the
+            noun were feminine, such as "книга" (book), it would be written as
+            "книга" (kniga) in the nominative case. <br />
+            <br />
             The same rules apply to pronouns. For example, the pronoun "я" (I)
             is always written as "я" (ya) in the nominative case, regardless of
             its gender or number. <br />
-            <br>
+            <br />
             It is important for students of Russian to understand and master the
             nominative case, as it is a crucial part of correct sentence
             structure in the language. Misusing the nominative case can lead to
             confusion or misunderstandings. <br />
           </p>
-
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -86,6 +87,43 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Nominative Plural Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th>Masculine</th>
+              <td>
+                if й, ь <br>
+                all others
+              </td>
+              <td class="red">
+                &rarr; и <br>
+                &rarr; +ы
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                if я, ь <br>
+                if а, 7-letter rule
+              </td>
+              <td class="red">
+                &rarr; и <br>
+                &rarr; ы (и)
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                if о <br>
+                if е, 7-letter rule
+              </td>
+              <td class="red">
+                &rarr; а <br>
+                &rarr; я (а)
+              </td>
+            </tr>
           </table>
         </div>
       </div>
