--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -38,6 +38,8 @@
           matches with gender.
         </p>
       </div>
+      <div class="row" style="height: 50px"></div>
+
       <h3>Singular Personal Pronouns</h3>
       <table class="table">
         <thead>
