--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
       <div class="row" style="height: 50px"></div>
 
       <div class="row">
-        <div class="col-2"></div>
-        <div class="col-10">
+        <div class="col-md-2"></div>
+        <div class="col-md-10">
           <h1>About</h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
           <p>
             This website offers comprehensive grammar lessons and a comprehensive
             translation dictionary for students of Russian. Our grammar lessons
