--- a/public/prepositional.html
+++ b/public/prepositional.html
@@ -30,8 +30,8 @@
         </nav>
       </div>
 
-      <div class="row">
-        <div class="col-2 d-none d-md-block red-background vh-100">
+      <div class="row max-height">
+        <div class="col-2 d-none d-md-block red-background">
           <div style="height: 50px"></div>
           <nav class="nav nav-pills flex-column red-background">
             <a class="nav-link" href="nominative.html">Nominative</a>
@@ -67,6 +67,7 @@
             to confusion or misunderstandings. <br />
           </p>
 
+          <h3>Examples</h3>
           <table class="table">
             <thead>
               <th>Masculine</th>
@@ -86,6 +87,45 @@
                 </td>
               </tr>
             </tbody>
+          </table>
+
+          <h3>Prepositional Formation</h3>
+          <table class="table table-bordered">
+            <tr>
+              <th>Masculine</th>
+              <td>
+                й <br>
+                all others <br>
+                some (most single syllable)
+              </td>
+              <td class="red">
+                &rarr; е <br>
+                &rarr; +е <br>
+                &rarr; +у
+              </td>
+            </tr>
+            <tr>
+              <th>Feminine</th>
+              <td>
+                а, я <br>
+                ь
+              </td>
+              <td class="red">
+                &rarr; е <br>
+                &rarr; и
+              </td>
+            </tr>
+            <tr>
+              <th>Neuter</th>
+              <td>
+                о <br>
+                е
+              </td>
+              <td class="red">
+                &rarr; е <br>
+                &rarr; е
+              </td>
+            </tr>
           </table>
         </div>
       </div>
