--- a/public/pronouns.html
+++ b/public/pronouns.html
@@ -41,6 +41,7 @@
       <div class="row" style="height: 50px"></div>
 
       <h3>Singular Personal Pronouns</h3>
+      <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
@@ -111,6 +112,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
       <div class="row" style="height: 50px"></div>
       <h3>Plural Personal Pronouns</h3>
       <table class="table">
