--- a/public/adjectives.html
+++ b/public/adjectives.html
@@ -30,6 +30,8 @@
         is modifying a feminine noun in the nominative case, and "красную" if it
         is modifying a feminine noun in the genitive case.
       </p>
+
+      <div class="table-responsive">
       <table class="table">
         <thead>
           <tr>
@@ -95,6 +97,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
   </body>
 
