--- a/public/genetive.html
+++ b/public/genetive.html
@@ -91,7 +91,7 @@
             </tbody>
           </table>
 
-          <h3>Geneitive Formation</h3>
+          <h3>Genitive Formation</h3>
           <table class="table table-bordered">
             <tr>
               <th>Masculine</th>
